<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/movie"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_tvshows"
            android:icon="@drawable/tv_show"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/advanced_search" />
        <item
            android:id="@+id/nav_popular_people"
            android:icon="@drawable/people"
            android:title="@string/popular_people" />
    </group>

    <item android:title="Lists">
        <menu>
            <item
                android:id="@+id/list_favourite"
                android:icon="@drawable/listview"
                android:title="Favourite List" />
            <item
                android:id="@+id/list_watch"
                android:icon="@drawable/listview"
                android:title="Watch List" />
        </menu>
    </item>

</menu>
