<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:background="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/height_tab">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_movie_detail"
        android:layout_marginLeft="10dp">

        <ImageButton
            android:layout_width="@dimen/img_btn_add"
            android:layout_height="@dimen/img_btn_add"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/greenstar"
            android:id="@+id/img_btn_movie_detail_rate"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:layout_marginTop="8dp"

            android:id="@+id/tv_movie_detail_rate"
            android:layout_below="@+id/img_btn_movie_detail_rate"
            android:layout_alignLeft="@+id/img_btn_movie_detail_rate"/>


        <ImageButton
            android:layout_width="@dimen/img_btn_add"
            android:layout_height="@dimen/img_btn_add"
            android:id="@+id/img_view_movie_detail_add"
            android:background="@drawable/add"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/img_btn_add_margin_left"
            android:layout_toRightOf="@+id/img_btn_movie_detail_rate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_movie_detail_add"
            android:layout_marginTop="8dp"
            android:text="@string/add"
            android:layout_below="@+id/img_view_movie_detail_add"
            android:layout_alignRight="@+id/img_view_movie_detail_add"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="@dimen/img_btn_add"
            android:layout_height="@dimen/img_btn_add"
            android:layout_marginLeft="@dimen/img_btn_add_margin_left"
            android:background="@drawable/moviedb"
            android:layout_toRightOf="@id/img_view_movie_detail_add"
            android:id="@+id/img_view_movie_detail_rating_one"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_view_movie_detail_rating_one"
            android:layout_alignStart="@+id/img_view_movie_detail_rating_one"
            android:id="@+id/tv_movie_detail_one_rating_one"/>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:maxLines="6"

        android:layout_below="@id/linear_layout_movie_detail"
        android:id="@+id/tv_movie_detail_one_descrip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/releasedate"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_below="@id/tv_movie_detail_one_descrip"
        android:id="@+id/tv_movie_detail_one_release_date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top_desc"
        android:layout_below="@+id/tv_movie_detail_one_release_date"
        android:id="@+id/tv_movie_detail_one_budget"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revenue"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_top_desc"

        android:layout_marginLeft="10dp"
        android:layout_below="@+id/tv_movie_detail_one_budget"
        android:id="@+id/tv_movie_detail_one_revenue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_movie_detail_one_release_date"
        android:id="@+id/tv_movie_detail_one_dvd_release_date_one"
        android:layout_toRightOf="@+id/tv_movie_detail_one_release_date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_desc"

        android:layout_below="@id/tv_movie_detail_one_release_date"
        android:id="@+id/tv_movie_detail_one_budget_one"
        android:layout_toRightOf="@+id/tv_movie_detail_one_budget"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_movie_detail_one_budget_one"
        android:layout_marginTop="@dimen/margin_top_desc"
        android:id="@+id/tv_movie_detail_one_revenue_one"
        android:layout_toRightOf="@+id/tv_movie_detail_one_revenue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trailers"
        android:textStyle="bold"
        android:textSize="18dp"
        android:id="@+id/tv_movie_detail_one_trailer"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tv_movie_detail_one_revenue"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/rv_trailer_movie_heights"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"

        android:layout_below="@+id/tv_movie_detail_one_trailer"
        android:id="@+id/recyclerview_movie_detail_trailer"></android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/similiar_movies"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_movie_detail_one_similiar_movies"
        android:layout_marginTop="10dp"
        android:layout_below="@id/recyclerview_movie_detail_trailer"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/rv_similiar_movies_heights"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_movie_detail_one_similiar_movies"
        android:id="@+id/recyclerview_movie_detail_similiar_movies"></android.support.v7.widget.RecyclerView>
</RelativeLayout>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>
