<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_search_advanced"
        android:weightSum="8">

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:textAlignment="center"
        android:textSize="@dimen/btn_size_advance_search"

        android:id="@+id/btn_fragment_discover_year_one"
        android:text="@string/date_2017"
        android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:textAlignment="center"
            android:id="@+id/btn_fragment_discover_year_two"
            android:textSize="@dimen/btn_size_advance_search"

            android:text="@string/date_2017"
            android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:textAlignment="center"
            android:id="@+id/btn_fragment_discover_category"

            android:text="@string/Category"
            android:textSize="@dimen/btn_size_advance_search"

            android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:textAlignment="center"
            android:id="@+id/btn_fragment_discover_genre"

            android:text="@string/Sortby"
            android:textSize="@dimen/btn_size_advance_search"
            android:layout_weight="1"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"></View>

    ></LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_below="@+id/linear_layout_search_advanced"
        android:id="@+id/view"></View>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginLeft="@dimen/rv_discover_margin_left"
        android:layout_below="@+id/view"
        android:id="@+id/rv_new_fragment_discover" />
</RelativeLayout>


